--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -34,6 +34,23 @@ ins {
     border: 2px solid rgba(246, 147, 73, 0.9);
 }
 
+.carlistgrid {
+    display: grid;
+    width: 100%;
+    background: #ffffff;
+    grid-template-columns: 1fr;
+    grid-row-gap: 1em;
+    border: 0;
+}
+
+.navline {
+    margin: auto;
+    width: 100%;
+    background-color: #f5f5f5;
+    border: 0 solid black;
+    color: #999999;
+}
+
 .modelheader {
     grid-column: 1 / -1;
     margin: auto;
@@ -173,4 +190,13 @@ body {
     background-color: #e6f1ff;
     cursor: pointer;
 
+}
+
+.removeitem {
+    background-color: white;
+    cursor: pointer;
+}
+
+.removeitem:hover {
+    background-color: palevioletred;
 }
