--- a/src/App/templates/app/add-item.phtml
+++ b/src/App/templates/app/add-item.phtml
@@ -4,12 +4,18 @@
  */
 declare(strict_types = 1);
 
-$this->headTitle('Add Car');
+$this->headTitle('Add Car For Sale');
+
+$headerline
+    = <<<EOF
+<div class="carheader">Add Car For Sale</div>
+EOF;
 
 if (isset($this->form)) {
 
     $this->form->prepare();
     $this->form->setAttribute('method', 'post');
+    $this->form->setAttribute('id','addcar');
 
     $displayForm = $this->form()->openTag($this->form);
 
@@ -83,11 +89,13 @@ EOF;
     }
 }
 ?>
-<h2>Add Car</h2>
 <div class="container">
     <div class="row">
-        <div class="col-lg-8"><?php if (!empty($displayForm)) {echo $displayForm;} ?></div>
-<div class="col-lg-4"><?php if (!empty($dispe)) {echo $dispe;} ?></div>
+        <div class="col-lg-12"><?= $headerline ?></div>
+    </div>
+    <div class="row">
+        <div class="col-md-8"><?php if (!empty($displayForm)) {echo $displayForm;} ?></div>
+<div class="col-md-4"><?php if (!empty($dispe)) {echo $dispe;} ?></div>
 </div>
 </div>
 <div><?php
