--- a/src/App/templates/app/logon.phtml
+++ b/src/App/templates/app/logon.phtml
@@ -15,6 +15,8 @@ $this->form->setAttribute('method', 'post');
 $this->form->setAttribute('class', 'form-inline');
 $lform = $this->form()->openTag($this->form);
 
+$registerLink = $this->serverUrl($this->url('registration'));
+
 /** @var \Zend\Form\Element $element */
 foreach ($this->form->getElements() as $name => $element) :
 
@@ -76,6 +78,7 @@ EOF;
 }
 ?>
 <h2>Log On</h2>
+<div>Or <a href="<?=$registerLink?>">Register</a></div>
 <div class="container">
     <div class="row">
         <div class="col-lg-8"><?=$lform?></div>
