--- a/src/App/templates/app/add-item.phtml
+++ b/src/App/templates/app/add-item.phtml
@@ -4,11 +4,11 @@
  */
 declare(strict_types = 1);
 
-$this->headTitle('Add Car For Sale');
+$this->headTitle('Advertise Your Car For Sale');
 
 $headerline
     = <<<EOF
-<div class="carheader">Add Car For Sale</div>
+<div class="carheader">Advertise Your Car For Sale</div>
 EOF;
 
 if (isset($this->form)) {
