--- a/src/App/templates/app/home-page.phtml
+++ b/src/App/templates/app/home-page.phtml
@@ -2,35 +2,9 @@
 declare(strict_types=1);
 $this->headTitle('Home'); ?>
 <h1>Scrappage</h1>
-<p>Find the latest 2017 Scrappage Schemes and deals from  <a href="https://scrappage.co.uk/sp/toyota-scrappage-scheme-2017/">Toyota</a>, <a href="https://scrappage.co.uk/sp/ford/">Ford</a>, <a href="https://scrappage.co.uk/sp/kia-scrappage-scheme-2017/">Kia</a>, <a href="https://scrappage.co.uk/sp/hyundai/">Hyundai</a> and <a href="https://scrappage.co.uk/sp/all-makes/">others</a>
 
 
-
-<p>Understand Scrappage in  <a href="https://scrappage.co.uk/sp/scrappage-schemes-explained/">Scrappage Schemes Explained</a>.
-
-<p><b>Recent Posts</b><br />
+<p>
+    <span style="font-size: large"><a href="<?=$this->serverUrl($this->url('additem'))?>">Sell your car</a> on scrappage.co.uk <span style="text-decoration: wavy underline">for FREE</span></span>
 </p>
-<div class="post-394 post type-post status-publish format-standard hentry category-uncategorised">
-    <a href="https://scrappage.co.uk/sp/hyundai-extends-scrappage-scheme/">Hyundai Extends Scrappage Scheme</a>  by kevin-sp (4th January 2018)<br />
-    Hyundai has extended its Scrappage Scheme to the 1st quarter of 2018. This is in line with recent scheme extensions from Ford, VW, Kia and others.
-</div>
-<br />
-<div class="post-392 post type-post status-publish format-standard hentry category-uncategorised">
-    <a href="https://scrappage.co.uk/sp/kia-extends-scrappage-scheme-to-2018/">Kia Extends Scrappage Scheme to 2018</a>  by kevin-sp (2nd January 2018)<br />
-    Kia follows Toyota , Ford and others and has extended its Scrappage Scheme into 2018.
-</div>
-<br />
-<div class="post-389 post type-post status-publish format-standard hentry category-uncategorised">
-    <a href="https://scrappage.co.uk/sp/vw-extends-scrappage-scheme-into-2018/">VW extends scrappage scheme into 2018</a>  by kevin-sp (31st December 2017)<br />
-    Volkswagen joins Ford &amp; Toyota in extending their VW Scrappage Scheme into 2018. New cars under this scheme must be ordered by 2 April 2018 and delivered by 30 June 2018. VW are expecting a surge before the £500 tax hike on new diesel from April 2018. The new Polo has a £2,000 discount instead &hellip; <a href="https://scrappage.co.uk/sp/vw-extends-scrappage-scheme-into-2018/" class="more-link">Continue reading<span class="screen-reader-text"> "VW extends scrappage scheme into 2018"</span></a>
-</div>
-<br />
-<div class="post-367 post type-post status-publish format-standard hentry category-uncategorised">
-    <a href="https://scrappage.co.uk/sp/toyota-extends-scrappage-scheme/">Toyota Extends Scrappage Scheme</a>  by kevin-sp (13th December 2017)<br />
-    Toyota has followed Ford and announced that the Toyota Scrappage Scheme will be extended to the end of January 2018.
-</div>
-<br />
-<div class="post-353 post type-post status-publish format-standard hentry category-uncategorised">
-    <a href="https://scrappage.co.uk/sp/ford-extends-scrappage-scheme/">Ford Extends Scrappage Scheme</a>  by kevin-sp (13th December 2017)<br />
-    Ford are extending the Ford Scrappage Scheme into the first quarter of 2018. Ford has seen over 10,500 vehicles scrapped and replaced with cleaner ones. Also Ford are including the Ford Ranger in the scheme for the first time as well as the most popular new Focus, Fiesta and Transit CV models. &nbsp; &nbsp; “The &hellip; <a href="https://scrappage.co.uk/sp/ford-extends-scrappage-scheme/" class="more-link">Continue reading<span class="screen-reader-text"> "Ford Extends Scrappage Scheme"</span></a>
-</div>
+<p>Information on <a href="<?=$this->serverUrl($this->url('scrappage-schemes-explained'))?>">2017/2018 Scrappage Schemes</a></p>
