--- a/src/App/templates/app/scrappage-schemes-explained.phtml
+++ b/src/App/templates/app/scrappage-schemes-explained.phtml
@@ -22,7 +22,7 @@ Since that time, various companies and manufacturers have offered various trade 
 
 The new vehicle scrappage schemes for 2017 are a mixture of scrappage (where your traded in vehicle is scrapped) and trade in where the vehicle may be scrapped or sold on , at the discretion of the dealer.
 
-Some dealers e.g. Audi are permanently scrapping all cars traded in under their schemes whereas others like BMW are selling on all vehicles traded in under its scheme.
+Some dealers e.g. <a href="<?=$this->serverUrl('/')?>sp/audi-scrappage-scheme-2017">Audi</a> are permanently scrapping all cars traded in under their schemes whereas others like <a href="<?=$this->serverUrl('/')?>sp/bmw">BMW</a> are selling on all vehicles traded in under its scheme.
 
 To qualify generally you will have to be in ownership of the vehicle with it
 registered in your name and the trade-in car must usually be around 7 years old or more.
