--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -78,7 +78,7 @@ $this->inlineScript()
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="<?= $this->url('additem') ?>"
+                            <a href="<?= $this->url('additemstep',['clear' => 1]) ?>"
                                class="nav-link">
                                 Sell Car
                             </a>
